# KaggleIngest

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  app.py  config.py  docker-compose.prod.yml  docker-compose.scaled.yml  docker-compose.yml  llms.txt  logger.py  main.py  mypy.ini  nginx.conf  prometheus.yml  pyproject.toml  railway.json  requirements.txt  rules.md  test_critical_fixes.sh  test_integration.sh  worker.py
backend/core/: __init__.py  cache.py  exceptions.py  file_cache.py  jobs.py  models.py  parser.py  redis_cache.py  toon_encoder.py  utils.py
backend/docs/: TOON_SPEC.md
backend/services/: kaggle_service.py  notebook_service.py  validation_service.py
backend/tests/: conftest.py  locustfile.py  test_api.py  test_core.py  test_integration.py
frontend/: .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/public/: llms.txt  manifest.json  og-image-template.html  robots.txt  sitemap.xml  toon.html
frontend/src/: App.css  App.jsx  constants.js  index.css
frontend/src/components/: Footer.jsx  Footer.module.css  Header.jsx  Header.module.css  InputForm.jsx  InputForm.module.css  Layout.jsx  ResultViewer.jsx  ResultViewer.module.css  StatusBanner.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/services/: api.js
frontend/src/styles/: Layout.module.css
frontend/tests/: ingest.spec.js
