[project]
name = "kaggleingest"
version = "5.0.0"
description = "Kaggle Notebook Ingestion Tool - Downloads and merges top Kaggle notebooks into context files"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.116.2",
    "kaggle==1.8.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.9",
    "tiktoken>=0.12.0",
    "filelock>=3.12.0",
    "aiofiles>=23.2.0",
    "prometheus-client>=0.19.0",
    "tenacity>=8.2.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "arq>=0.26.3",
]

[project.scripts]
kaggleingest = "main:main"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

